[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "opehaina"
version = "0.0.3"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "Opehaina"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["opehaina"]

dependencies = [
    "requests >= 2.32.3",
    "PyYAML >= 6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/alxfed/opehaina"
"Bug Tracker" = "https://github.com/alxfed/opehaina/issues"